# messpit

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
crates/engine-core/: Cargo.toml
crates/engine-core/src/: cheattable.rs  lib.rs  pattern.rs  pointer.rs  project.rs  router.rs  scan.rs  session.rs  transport.rs  watch.rs
crates/platform/: Cargo.toml
crates/platform/src/: error.rs  lib.rs  linux.rs  macos.rs  traits.rs  windows.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: commands.rs  events.rs  lib.rs  types.rs
crates/script-host/: Cargo.toml
crates/script-host/src/: bindings.rs  lib.rs  runtime.rs
src/: App.svelte
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: helpers.rs  main.rs  state.rs  types.rs
