[package]
name = "messpit-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core scanning engine, session management, and command routing"

[dependencies]
messpit-protocol = { path = "../protocol" }
messpit-platform = { path = "../platform" }
messpit-policy = { path = "../policy" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
rayon.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
