[package]
name = "messpit-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform abstraction for process attach/read/write operations"

[dependencies]
messpit-protocol = { path = "../protocol" }
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
mach2.workspace = true
libc.workspace = true
sha2 = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[dev-dependencies]
