[package]
name = "messpit-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Policy engine for gating operations"

[dependencies]
messpit-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
