[package]
name = "messpit-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command/event protocol types for Messpit engine communication"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
